WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43927
[Qt] ARMv5 Compiling error in FrameLoaderClientQt.cpp if QT_USE_FAST_OPERATOR_PLUS is defined globally
https://bugs.webkit.org/show_bug.cgi?id=43927
Summary
[Qt] ARMv5 Compiling error in FrameLoaderClientQt.cpp if QT_USE_FAST_OPERATOR...
Hui Huang
Reported
2010-08-12 11:39:38 PDT
Created
attachment 64244
[details]
ARM compiler output When building webkit trunk for S60 hardware using ARMv5 Compiler (RCVT 2.2 Build 686) with QT 4.7, the compiler reported the following error: "X:\sf.plat\mw\qt\src\3rdparty\webkit\WebKit\qt\WebCoreSupport\FrameLoaderClientQt.cpp", line 1124: Error: #135: class "QStringBuilder<char [19], QString>" has no member "toLocal8Bit" (node) ? qPrintable(" originating from " + drtDescriptionSuitableForTestResult(node, 0)) : ""); The compiler output is attached as "ARM compiler output". The compiler uses the option -DQT_USE_FAST_OPERATOR_PLUS. According to
http://doc.trolltech.com/4.7-snapshot/qstring.html
, when QT_USE_FAST_OPERATOR_PLUS is defined globally, QString '+' operator is performed by internal template class QStringBuilder which does not have the member "toLocal8bit" which the qPrintable Macro uses.
Attachments
ARM compiler output
(10.59 KB, text/plain)
2010-08-12 11:39 PDT
,
Hui Huang
no flags
Details
Proposed patch
(1.41 KB, patch)
2010-08-12 11:50 PDT
,
Hui Huang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hui Huang
Comment 1
2010-08-12 11:50:23 PDT
Created
attachment 64245
[details]
Proposed patch The attached proposed patch makes the compiler happy.
Laszlo Gombos
Comment 2
2010-08-13 15:26:15 PDT
Comment on
attachment 64245
[details]
Proposed patch The ChangeLog should have had the [Qt] prefix as well, and perhaps some of the solution description should go to the ChnageLog and not to the bug, but otherwise the patch looks good to me, r+. I will land the patch manually.
Hui Huang
Comment 3
2010-08-14 11:08:03 PDT
Laszlo, thanks a lot for reviewing the patch. Thanks for the suggestions.
Laszlo Gombos
Comment 4
2010-08-17 11:28:22 PDT
Comment on
attachment 64245
[details]
Proposed patch Committed as
http://trac.webkit.org/changeset/65521
.
Hui Huang
Comment 5
2010-08-17 12:04:13 PDT
Laszlo, thanks again.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug