2010-08-17  Hui Huang  <hui.2.huang@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] Fix ARM5 compiling error in FrameLoaderClientQt.cpp
        https://bugs.webkit.org/show_bug.cgi?id=43927

        In the Symbian build chain QT_USE_FAST_OPERATOR_PLUS is defined,
        which means that the '+' will automatically be performed as the
        QStringBuilder '%'. Create a QString explicitly to make sure that
        toLocal8bit() member is available that the qPrintable Macro uses.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchDecidePolicyForNavigationAction):



Canonical link: https://commits.webkit.org/56321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65521 268f45cc-cd09-0410-ab3c-d52691b4dbfc